--- a/blog_api/package.json
+++ b/blog_api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "strat": "node ./src/app.jsx",
+    "start": "node ./src/app.jsx",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
