--- a/blog_api/package.json
+++ b/blog_api/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "homepage": "./",
   "dependencies": {
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
